--- a/package.xml
+++ b/package.xml
@@ -42,9 +42,11 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>rosbag</build_depend>
   <build_depend>roscpp</build_depend>
+  <build_depend>std_msgs</build_depend>
   <build_depend>std_srvs</build_depend>
   <run_depend>rosbag</run_depend>
   <run_depend>roscpp</run_depend>
+  <run_depend>std_msgs</run_depend>
   <run_depend>std_srvs</run_depend>
 
 
