speed up rosdep-update

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
         run: |
           source /opt/ros/${{ matrix.rosdistro }}/setup.bash
           sudo apt update
-          rosdep update
+          rosdep update --rosdistro ${{ matrix.rosdistro }}
           sudo rosdep install --default-yes -r --ignore-src --from-paths src --rosdistro ${{ matrix.rosdistro }}
       # Build
       - name: Build
